Add Docker configuration, service interfaces, and update application properties